pkgs/typed-racket-pkgs/typed-racket-tests/tests/typed-racket/fail/cast-mod3.rkt
#;
(exn-pred exn:fail:syntax? #rx".*free variables.*")

#lang typed/racket/base

(: f (All (a) (Number -> a)))
(define (f x) (cast x a))
